--- a/public/json/projects.json
+++ b/public/json/projects.json
@@ -9,9 +9,9 @@
     {
         "title": "I Apply Math in My World",
         "gitUrl" : "https://github.com/luzeli29/iapplymath",
-        "p1" : "\"I Apply Math In My World\" is an educational website aimed at reducing math anxiety among Spanish-speaking ESO students in grades 3-5. I created it as a final project for a client-based university course to gather research on the effects of educational video games and math anxiety.",
+        "p1" : "\"I Apply Math In My World\" is an educational website aimed at reducing math anxiety among Spanish-speaking ESL students in grades 3-5. I created it as a final project for a client-based university course to gather research on the effects of educational video games and math anxiety.",
         "p2" : "To create a seamless user experience, I utilized the Next.js framework as the front-end, which allowed for efficient server-side rendering of pages and quick navigation. The back-end is powered by a MongoDB database, which allowed for fast and easy data storage and retrieval.",
         "p3" : "In addition to providing educational resources and tips for managing math anxiety, the website also included a login feature to access personalized content and multiple data collection features to track user progress and provide personalized feedback. To achieve this, I utilized Restful API design, which provided a standardized way of communicating between the front-end and back-end systems.",
-        "p4" : "Overall, \"I Apply Math In My Own World\" is a powerful tool for helping Spanish-speaking ESO students build confidence in their math skills and reduce math anxiety."
+        "p4" : "Overall, \"I Apply Math In My Own World\" is a powerful tool for helping Spanish-speaking ESL students build confidence in their math skills and reduce math anxiety."
     }
 ]
